<resources>
    <string name="facebook_app_id">1080161318756977</string>
    <string name="google_api_key">AIzaSyD_W5hNOfKdR3xbEEkbX1rI2sJ3nDv1E64</string>
    <string name="app_name">Aertrip</string>
    <string name="tv_im_new">I\'m New</string>
    <string name="tv_register">Register</string>
    <string name="tv_existing_user">Existing User</string>
    <string name="tv_sign_in">Sign in</string>
    <string name="tv_continue_with_facebook">Continue with Facebook</string>
    <string name="tv_continue_with_google">Continue with Google</string>
    <string name="tv_continue_with_linkedin">Continue with Linkedin</string>
    <string name="tv_hint_login">Enjoy a more personalised\ntravel experience</string>
    <string name="tv_secure_your_account">Secure your\naccount</string>
    <string name="tv_set_password">Set password</string>
    <string name="hint_password">Password</string>
    <string name="tv_password_conditions">Password Conditions:</string>
    <string name="tv_number">Number</string>
    <string name="tv_lower_case">Lowercase</string>
    <string name="tv_upper_case">Uppercase</string>
    <string name="tv_special">Special</string>
    <string name="tv_character">Characters</string>
    <string name="tv_special_char">\u0040</string>
    <string name="tv_next">Next</string>
    <string name="tv_welcome_back">Welcome Back!</string>
    <string name="tv_not_yet_registered">Not yet registered?</string>
    <string name="tv_register_here">Register here</string>
    <string name="hint_email">Email ID</string>
    <string name="please_enter_email">Please enter a valid Email ID to proceed</string>
    <string name="please_enter_message">Please enter a proper message</string>
    <string name="Please_enter_password">Please enter password</string>
    <string name="no_internet">No Internet Connection.</string>
    <string name="tv_forgot_your_password">Forgot Your\nPassword?</string>
    <string name="tv_hint_forgot_password">Don\'t worry. We\'ll email you instructions on\n how to reset your password.</string>
    <string name="tv_forgot_password">Forgot Password?</string>
    <string name="email_error">Please enter valid Email ID</string>
    <string name="tv_check_you_email">Check Your\n Email</string>
    <string name="tv_hint_reset_password">We have sent you password reset\ninstructions on</string>
    <string name="tv_bottom_msg_forgot">If the email does not arrive soon, check your bulk or junk folder. It was sent from </string>
    <string name="tv_noreply_aertrip_com">noreply@aertrip.com</string>
    <string name="tv_open_in_mail_app">Open Email App</string>
    <string name="tv_check_your_email_to_reset_password">Check your email to reset password</string>
    <string name="tv_thank_you_registering">Thank you for registering.</string>
    <string name="tv_hint_account_activation">We have sent you an account\nactivation link on</string>
    <string name="tv_check_your_email_to_activate_account">Check your email to activate\n your account.</string>
    <string name="tv_bottom_msg_activate_account">The activation email will expire in 7 days. If the email does not arrive soon, check your bulk or junk folder. It was sent from</string>
    <string name="tv_create_account">Create your\n account</string>
    <string name="tv_aertrip_privacy_terms">By registering, you agree to Aertrip\'s\n privacy policy &amp; terms of use.</string>
    <string name="tv_already_registered">Already Registered?</string>
    <string name="tv_login_here">Login here</string>
    <string name="enjoy_a_more_personalised_travel_experience">Enjoy a more personalised\ntravel experience</string>
    <string name="login_or_register">Login or Register</string>
    <string name="view_profile">View Profile</string>
    <string name="total_amt_due">Total Amount Due</string>
    <string name="view_accounts">View Accounts</string>
    <string name="why_aertrip">Support</string>
    <string name="support">Support</string>
    <string name="aerin">Aerin</string>
    <string name="contacts">Contacts</string>
    <string name="flights">Flights</string>
    <string name="hotels">Hotels</string>
    <string name="trips">Trips</string>
    <string name="action_profile">Profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="smart_sort">Smart Sort</string>
    <string name="offers">Offers</string>
    <string name="contact_us">Contact Us</string>
    <string name="settings">Settings</string>
    <string name="hi_i_m_aerin">Hi, I’m Aerin</string>
    <string name="your_personal_travel_assistant">Your personal travel assistant</string>
    <string name="try_asking_for_flights_from_mumbai_to_delhi_on_christmas">“Try asking for Flights from Mumbai to Delhi on Christmas”</string>
    <string name="weekend_getaway">Weekend Getaway!</string>
    <string name="under_development">Under Development</string>
    <string name="tv_reset_password">Reset\n Password</string>
    <string name="tv_new_password">Please enter new password</string>
    <string name="hint_new_password">New Password</string>
    <string name="password_error">Invalid password, Please try to add it again!</string>
    <string name="tv_successfull">Successful</string>
    <string name="tv_password_reset_successfully">Your password has been reset\n successfully.</string>
    <string name="tv_login">Login</string>
    <string name="tv_create_your_profile">Create Your\n Profile</string>
    <string name="tv_you_are_done">and you are done!</string>
    <string name="hint_title">Title</string>
    <string name="hint_first_name">First Name</string>
    <string name="hint_last_name">Last Name</string>
    <string name="hint_country">Country</string>
    <string name="tv_search_country">Search Country</string>
    <string name="hint_mobile_no">Mobile Number</string>
    <string name="tv_started">Lets Get Started!</string>
    <string name="err_title_error">Please select title.</string>
    <string name="err_first_name">Please enter first name.</string>
    <string name="err_last_name">Please enter last name.</string>
    <string name="err_country">Please select country</string>
    <string name="err_mobile">Please enter mobile number</string>
    <string name="he_logout">Logout?</string>
    <string name="msg_logout">Are you sure you want to log out?</string>
    <string name="tv_logout">LOGOUT</string>
    <string name="tv_cancel">CANCEL</string>
    <string name="tv_log_out">Log Out</string>
    <string name="tv_notifications">Notifications</string>
    <string name="tv_settings">Settings</string>
    <string name="tv_newsletters">Newsletters</string>
    <string name="tv_linked_accounts">Linked Accounts</string>
    <string name="tv_quickpay">QuickPay</string>
    <string name="tv_hotel_preferences">Hotel Preferences</string>
    <string name="he_privacy_policy">Privacy Policy</string>
    <string name="terms_n_conditions">Terms And Conditions</string>
    <string name="terms_of_use">Terms Of Use</string>
    <string name="transition_string">hello</string>
    <string name="edit">Edit</string>
    <string name="travellers_list">Travellers List</string>
    <string name="hotel_preferences">Hotel Preferences</string>
    <string name="linked_accounts">Linked Accounts</string>
    <string name="newsletters">Newsletters</string>
    <string name="tv_edit">EDIT</string>
    <string name="tv_save">SAVE</string>
    <string name="tv_email_address">Email Address</string>
    <string name="tv_contact_number">Contact Number</string>
    <string name="tv_social_acounts">Social Accounts</string>
    <string name="tv_address">Address</string>
    <string name="tv_more_info">More Information</string>
    <string name="tv_birthday">Birthday</string>
    <string name="tv_anniversary">Anniversary</string>
    <string name="tv_notes">Notes</string>
    <string name="tv_passport_details">Passport Details</string>
    <string name="tv_passport_no">Passport No.</string>
    <string name="tv_issue_country">Issue Country</string>
    <string name="tv_issue_date">Issue Date</string>
    <string name="tv_expiry_date">Expiry Date</string>
    <string name="tv_flight_preference">Flight Preferences</string>
    <string name="tv_seat_preference">Seat Preference</string>
    <string name="tv_meal_preference">Meal Preference</string>
    <string name="tv_frequent_flyer">Frequent Flyer</string>
    <string name="bookings">Bookings</string>
    <string name="refer_and_earn">Refer and Earn</string>
    <string name="open_in">Open in</string>
    <string name="connect_your_social_media_accounts_for_faster_login_and_sharing">Connect your social media accounts for faster login and sharing.</string>
    <string name="facebook">Facebook</string>
    <string name="disconnect">Disconnect</string>
    <string name="google">Google</string>
    <string name="linkedin">LinkedIn</string>
    <string name="tv_default">Default</string>
    <string name="connect_with_facebook">Connect with Facebook</string>
    <string name="connect_with_google">Connect with Google</string>
    <string name="connect_with_linkedin">Connect with Linkedin</string>
    <string name="connect_your_facebook">Connect your facebook</string>
    <string name="connect_your_google">Connect your google</string>
    <string name="connect_your_linkedin">Connect your linkedIn</string>
    <string name="he_edit_proile">Edit Profile</string>
    <string name="tv_add_email">Add Email</string>
    <string name="tv_add_contact_no">Add Contact Number</string>
    <string name="tv_add_social_account_id">Add Social Account ID</string>
    <string name="tv_add_address">Add Address</string>
    <string name="tv_continue">Continue</string>
    <string name="linked_account">Linked Accounts</string>
    <string name="hint_street">Street</string>
    <string name="hint_city">City</string>
    <string name="hint_postcode">Postcode</string>
    <string name="hint_state">State</string>
    <string name="hint_select_date">Select Date</string>
    <string name="hint_enter_notes">Enter Notes</string>
    <string name="hint_passport_number">Passport Number</string>
    <string name="tv_add_frequent_flyer">Add Frequent Flyer</string>
    <string name="tv_select">Select</string>
    <string name="tv_select_program">Select Program</string>
    <string name="menu_take_photo">Take Photo</string>
    <string name="menu_choose_photo">Choose Photo</string>
    <string name="menu_import_google">Import from Gmail</string>
    <string name="menu_import_facebook">Import from Facebook</string>
    <string name="menu_remove_photo">Remove Photo</string>
    <string name="permission_denied">Permissions denied</string>
    <string name="permission_granted">Permissions Granted</string>
    <string name="hint_email_custom">Email</string>
    <string name="tv_search_airlines">Search Airlines</string>
    <string name="tv_no_result">No Results</string>
    <string name="tv_country">Country</string>
    <string name="hint_number">Number</string>
    <string name="tv_enter_hotel_name">Enter Hotel Name</string>
    <string name="preferred_star_category">Preferred Star Category</string>
    <string name="CheckAndDDTypes">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="favourite_hotels">Favourite Hotels</string>
    <string name="tap">Tap</string>
    <string name="to_add_a_hotel_to_favorite_list">to add a hotel to favorite list</string>
    <string name="he_traveller_list">Traveller List</string>
    <string name="action_search">Search</string>
    <string name="action_add">Add</string>
    <string name="action_select">Select</string>
    <string name="action_preference">Preferences</string>
    <string name="ivProfileName">ProfileImageTransitionName</string>
    <string name="tvProfileName">ProfileNameTransitionName</string>
    <string name="flProfileImage">ProfileFrameName</string>
</resources>