<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rl_parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:fillViewport="true"
    android:fitsSystemWindows="false">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/cl_toolbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/transparent"
        app:elevation="0dp">


        <androidx.core.widget.NestedScrollView
            android:id="@+id/sv_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:id="@+id/ll_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <View
                    android:id="@+id/v_profile"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_1sdp"
                    android:background="@color/line_grey" />

                <LinearLayout
                    android:id="@+id/ll_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_travel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:foreground="?attr/selectableItemBackground"
                        android:gravity="center"
                        android:padding="@dimen/_16sdp"
                        android:text="@string/travellers_list"
                        android:textColor="@color/c_black"
                        android:textSize="@dimen/_16ssp" />

                    <TextView
                        android:id="@+id/tv_hotel_preference"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:foreground="?attr/selectableItemBackground"
                        android:gravity="center"
                        android:padding="@dimen/_16sdp"
                        android:text="@string/favourite_hotels"
                        android:textColor="@color/c_black"
                        android:textSize="@dimen/_16ssp" />

                    <TextView
                        android:id="@+id/tv_quick_pay"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:foreground="?attr/selectableItemBackground"
                        android:gravity="center"
                        android:padding="@dimen/_16sdp"
                        android:text="@string/tv_quickpay"
                        android:textColor="@color/c_black"
                        android:textSize="@dimen/_16ssp" />

                    <TextView
                        android:id="@+id/tv_linked_accounts"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:foreground="?attr/selectableItemBackground"
                        android:gravity="center"
                        android:padding="@dimen/_16sdp"
                        android:text="@string/linked_accounts"
                        android:textColor="@color/c_black"
                        android:textSize="@dimen/_16ssp" />

                    <TextView
                        android:id="@+id/tv_newsletters"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:foreground="?attr/selectableItemBackground"
                        android:gravity="center"
                        android:padding="@dimen/_16sdp"
                        android:text="@string/newsletters"
                        android:textColor="@color/c_black"
                        android:textSize="@dimen/_16ssp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_1sdp"
                        android:layout_marginStart="@dimen/_15sdp"
                        android:layout_marginEnd="@dimen/_15sdp"
                        android:background="@color/line_grey" />

                    <TextView
                        android:id="@+id/tv_setting"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:foreground="?attr/selectableItemBackground"
                        android:gravity="center"
                        android:padding="@dimen/_16sdp"
                        android:text="@string/settings"
                        android:textColor="@color/c_black"
                        android:textSize="@dimen/_16ssp" />

                    <TextView
                        android:id="@+id/tv_notifications"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:foreground="?attr/selectableItemBackground"
                        android:gravity="center"
                        android:padding="@dimen/_16sdp"
                        android:text="@string/tv_notifications"
                        android:textColor="@color/c_black"
                        android:textSize="@dimen/_16ssp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_1sdp"
                        android:layout_marginStart="@dimen/_15sdp"
                        android:layout_marginEnd="@dimen/_15sdp"
                        android:background="@color/line_grey" />

                    <TextView
                        android:id="@+id/tv_log_out"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:foreground="?attr/selectableItemBackground"
                        android:gravity="center"
                        android:layout_marginBottom="@dimen/_20sdp"
                        android:padding="@dimen/_16sdp"
                        android:text="@string/tv_log_out"
                        android:textColor="@color/c_black"
                        android:textSize="@dimen/_16ssp" />

                </LinearLayout>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_265sdp"
            android:background="@android:color/transparent"
            android:clipToPadding="false"
            android:fitsSystemWindows="false"
            app:elevation="0dp">


            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/toolbar_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                android:minHeight="@dimen/_110sdp"
                app:contentScrim="@android:color/transparent"

                app:layout_scrollFlags="scroll|exitUntilCollapsed">

                <FrameLayout
                    android:id="@+id/fl_blur"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_270sdp">

                    <ImageView
                        android:id="@+id/iv_blur"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:foreground="@drawable/image_gradiant"
                        android:scaleType="fitXY" />

                    <TextView
                        android:id="@+id/tv_blur"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/_30sdp"
                        android:gravity="center_horizontal"
                        android:letterSpacing=".3"
                        android:maxLines="2"
                        android:singleLine="true"
                        android:textAllCaps="true"
                        android:textColor="@color/text_grey"
                        android:textSize="170sp"
                        android:textStyle="bold"
                        android:visibility="visible" />

                </FrameLayout>

                <RelativeLayout
                    android:id="@+id/rl_profile"
                    android:layout_marginTop="?attr/actionBarSize"
                    android:layout_gravity="center_horizontal"
                    app:layout_collapseMode="parallax"
                    android:transitionName="@string/ivProfileName"
                    android:layout_width="@dimen/_110sdp"
                    android:layout_height="@dimen/_110sdp">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/iv_profile"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:civ_border_color="@color/text_grey_color"
                        app:civ_border_width="@dimen/_4sdp" />

                    <!-- <android.support.v7.widget.AppCompatTextView
                         android:id="@+id/tv_initials"
                         android:gravity="center"
                         android:background="@drawable/bg_white_circle_with_border"
                         android:layout_centerInParent="true"
                         android:textColor="@color/c_bg_spinner"
                         android:fontFamily="@font/source_sans_pro_regular"
                         android:textSize="@dimen/_55ssp"
                         tools:text="WW"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"/>-->

                </RelativeLayout>

                <FrameLayout
                    android:id="@+id/fl_image"
                    android:layout_width="@dimen/_110sdp"
                    android:layout_height="@dimen/_110sdp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="?attr/actionBarSize"
                    android:background="@android:color/transparent"
                    android:transitionName="@string/flProfileImage"
                    android:visibility="gone"
                    app:layout_collapseMode="pin">

                    <ImageView
                        android:layout_width="@dimen/_100sdp"
                        android:layout_height="@dimen/_100sdp"
                        android:layout_gravity="center"
                        android:transitionName="@string/ivProfileName"
                        android:visibility="gone" />

                </FrameLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_175sdp"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    app:layout_collapseMode="pin">

                    <TextView
                        android:id="@+id/tv_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_15sdp"
                        android:layout_marginEnd="@dimen/_15sdp"
                        android:ellipsize="end"
                        android:gravity="center"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:text="scadsfsdfsdffdsfsfas"
                        android:textColor="@color/c_black"
                        android:textSize="@dimen/_24ssp"
                        android:transitionName="@string/tvProfileName" />

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/tv_email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_10sdp"
                            android:gravity="center"
                            android:text="sdssfsfsaffsdf"
                            android:textColor="@color/c_black"
                            android:textSize="@dimen/_12ssp" />

                        <TextView
                            android:id="@+id/tv_phone_number"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/tv_email"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="@dimen/_3sdp"
                            android:gravity="center"
                            android:text=""
                            android:textColor="@color/c_black"
                            android:textSize="@dimen/_12ssp" />
                    </RelativeLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/transparent" />
                </LinearLayout>


            </com.google.android.material.appbar.CollapsingToolbarLayout>

        </com.google.android.material.appbar.AppBarLayout>



    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <RelativeLayout
        android:id="@+id/ll_status_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <View
            android:id="@+id/v_status"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:background="@color/transparent" />


        <include
            layout="@layout/profile_toolbar"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_below="@id/v_status" />

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/fl_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:layout_marginBottom="@dimen/_10sdp"
            />
    </RelativeLayout>


</RelativeLayout>
